// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ListingCard matches snapshot 1`] = `
<a
  aria-label="ListingCard.screenreader.label"
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="media"
  >
    <div
      class="root aspectRatioWrapper"
    >
      <div
        class="aspectPadding"
        style="padding-bottom: 100%;"
      >
        <div
          class="aspectBox"
        >
          <div
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          />
        </div>
      </div>
    </div>
    <button
      aria-label="ListingCard.saveListing"
      class="favoriteButton"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="favoriteIcon"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.6"
        viewBox="0 0 24 24"
        width="20"
      >
        <path
          d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
        />
      </svg>
    </button>
  </div>
  <div
    class="info"
  >
    <div
      class="authorRow"
    >
      <div
        class="authorName"
      >
        ListingCard.author
      </div>
    </div>
    <div
      class="title"
    >
      listing1 title
    </div>
    <div
      class="price"
      title="55"
    >
      <span
        class="pricePrefix"
      >
        ListingCard.priceFromPrefix
      </span>
      <span
        class="priceValue"
      >
        55
      </span>
    </div>
  </div>
</a>
`;

exports[`ListingCard matches snapshot without price 1`] = `
<a
  aria-label="listing1 title"
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="media"
  >
    <div
      class="root aspectRatioWrapper"
    >
      <div
        class="aspectPadding"
        style="padding-bottom: 100%;"
      >
        <div
          class="aspectBox"
        >
          <div
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          />
        </div>
      </div>
    </div>
    <button
      aria-label="ListingCard.saveListing"
      class="favoriteButton"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="favoriteIcon"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.6"
        viewBox="0 0 24 24"
        width="20"
      >
        <path
          d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
        />
      </svg>
    </button>
  </div>
  <div
    class="info"
  >
    <div
      class="authorRow"
    >
      <div
        class="authorName"
      >
        ListingCard.author
      </div>
    </div>
    <div
      class="title"
    >
      listing1 title
    </div>
  </div>
</a>
`;
